syntax = "proto3";

package dcs;

message OutTextRequest {
  string text = 1;
  int32 display_time = 2;
  bool clear_view = 3;
}

message OutTextResponse {
  bool success = 1;
}

message GetUserFlagRequest {
  string flag = 1;
}

message GetUserFlagResponse {
  uint32 value = 1;
}

message SetUserFlagRequest {
  string flag = 1;
  uint32 value = 2;
}

message SetUserFlagResponse {
  bool success = 1;
}

service Mission {
  // https://wiki.hoggitworld.com/view/DCS_func_outText
  rpc OutText (OutTextRequest) returns (OutTextResponse) {}

  // https://wiki.hoggitworld.com/view/DCS_func_getUserFlag
  rpc GetUserFlag (GetUserFlagRequest) returns (GetUserFlagResponse) {}

  // https://wiki.hoggitworld.com/view/DCS_func_setUserFlag
  rpc SetUserFlag (SetUserFlagRequest) returns (SetUserFlagResponse) {}
}